--- a/index.html
+++ b/index.html
@@ -22,3 +22,5 @@
 <b><p id="text-id">Andrew Barto has done many things as he is ageing. Andrew received his B.S. (bachelor of science degree) in mathematics from the University of Michigan in 1970. Andrew won an award called Pioneer Award. A couple of years later, Andrew joined a college of information and Computer Sciences at the Massachusetts university. He was a postdoctoral research associate and later on promoted to associate professor in 1982. A little bit later on, he was a full professor in 1991. From 2007 to 2011 he was officially the department chair and is a co-director of the Autonomous Learning Laboratory. He has published over  one hundred papers, journals and books</p></b>
 <hr>  
 <img src="./images/Book.jpg" alt="image of book" width="25%">
+</body>
+</html>
